samples/_failures_safe/1761448821_0ebed6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d23087a.c: In function ‘dfs’:
./samples/SAFE/__tmp_1d23087a.c:179:48: error: expected ‘)’ at end of input
  179 |     struct Node* start = find_node(graph, start
      |                                   ~            ^
      |                                                )
./samples/SAFE/__tmp_1d23087a.c:179:12: error: expected declaration or statement at end of input
  179 |     struct Node* start = find_node(graph, start
      |            ^~~~
